# rust_wasm_snake_game

./: Cargo.toml  README.md  index.html  main.js  style.css
src/: lib.rs  world.rs
src/World/: coord.rs
