[package]
name = "rust-wasm-snake-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Element",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "ImageData"
] }
js-sys = "0.3"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
